--- a/lindsay.ipynb
+++ b/lindsay.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# set working directory\n",
-    "path = 'C:/Users/' "
+    "path = '/Users/lindsaycoome/Documents/GitHub/CNNProject' "
    ]
   },
   {
