--- a/lindsay.ipynb
+++ b/lindsay.ipynb
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## start searching cnn.."
+    "# Start searching cnn..."
    ]
   },
   {
